<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/action_share"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_share"
            android:scaleType="centerCrop"
            android:background="?android:attr/selectableItemBackground"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/share"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/picture_holder"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="100dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/action_share"
            app:layout_constraintVertical_bias="0.1">

            <ImageView
                android:id="@+id/iv_picture"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:src="@tools:sample/avatars"
                android:scaleType="centerCrop"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_real_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/real_name"
            android:textAlignment="center"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@+id/picture_holder"
            app:layout_constraintEnd_toEndOf="@id/picture_holder"
            app:layout_constraintTop_toBottomOf="@+id/picture_holder"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="140dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_real_name"/>

        <TextView
            android:id="@+id/tv_series_name_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            android:textSize="12sp"
            android:text="@string/series_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_real_name"/>

        <TextView
            android:id="@+id/tv_series_name_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:textSize="12sp"
            android:text="@string/real_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_real_name"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_birthdate_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            android:textSize="12sp"
            android:text="@string/birth_date"
            app:layout_constraintTop_toBottomOf="@+id/tv_series_name_value"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_birthdate_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:textSize="12sp"
            android:text="@string/birth_date"
            app:layout_constraintTop_toBottomOf="@+id/tv_series_name_value"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_description_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            android:textSize="12sp"
            android:text="@string/description"
            app:layout_constraintTop_toBottomOf="@+id/tv_birthdate_value"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_description_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:textSize="12sp"
            android:text="@string/series_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_birthdate_value"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>